--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdkVersion 27
     defaultConfig {
         applicationId "com.example.azerty.feelae"
-        minSdkVersion 22
+        minSdkVersion 26
         targetSdkVersion 27
         versionCode 1
         versionName "1.0"
@@ -44,4 +44,6 @@ dependencies {
     implementation 'com.mikepenz:fastadapter:3.2.7'
     implementation 'com.mikepenz:fastadapter-commons:3.2.5'
     implementation 'com.android.volley:volley:1.1.0'
+    implementation 'com.hendraanggrian:pikasso:0.2'
+    implementation "com.android.support:support-compat:27.1.1"
 }
