--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,15 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.azerty.feelae">
 
-
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:allowBackup="true"
         android:name=".http.BackendVolley"
+        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -23,7 +21,7 @@
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyDGdgiadL9am9aEylXskvVAnSMPhe1YnAY" />
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".SpashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -31,8 +29,11 @@
             </intent-filter>
         </activity>
         <activity android:name=".RecapActivity" />
+        <activity android:name=".MainActivity" />
         <activity android:name=".TraitementDetailActivity" />
+
         <receiver android:name=".notification.NotificationPublisher" />
+
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps" />
